# AGITEGEN

./: .gitignore  README.md  bump_version.py  detox.config.js  pyproject.toml
.github/workflows/: ci.yml  ios.yml  publish.yml
agitegen/: cli.py  embed.py  llm.py  quota.py  runner.py  scaffolder.py  tester.py  unmet.py  utils.py
aidergen/: cli.py  ios.py  llm.py  quota.py  unmet.py  utils.py
e2e/: first.spec.js
